# haskmania

./: .gitignore  CHANGELOG.md  README.md  cabal.project  cse230-project.cabal  flake.nix
app/: GameRow.hs  Main.hs
app/HaskMania/: Color.hs  Feedback.hs  GameRow.hs  LinearRegression.hs  PauseScreen.hs  Settings.hs  SoundW.hs  TimeKeeper.hs
app/HaskMania/Data/: Beatmap.hs  Parser.hs
