cabal-version:      3.0
name:               cse230-project
version:            0.1.0.0
synopsis:           A terminal-based 4k VSRG, written in Haskell and brick.
-- description:
homepage:           https://github.com/huantianad/cse230-project
license:            LGPL-3.0-only
license-file:       LICENSE
author:             huantian
maintainer:         davidtianli@gmail.com
-- copyright:
category:           Game
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options:
        -threaded

        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-exported-signatures
        -Wno-missing-import-lists
        -Wno-missed-specialisations
        -Wno-all-missed-specialisations
        -Wno-unsafe
        -Wno-safe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-local-signatures
        -Wno-monomorphism-restriction
        -Wno-missing-kind-signatures
        -Wno-missing-deriving-strategies
        -Wno-prepositive-qualified-module

    default-extensions:
        TemplateHaskell

executable cse230-project
    import:           options
    main-is:          Main.hs
    other-modules:
        HaskMania.GameRow
        HaskMania.TimeKeeper
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        proteaaudio ^>= 0.10.1,
        -- proteaaudio-sdl ^>= 0.10.1,
        vty >= 6.1,
        brick ^>= 2.1.1,
        microlens-platform ^>= 0.4.3.4,
        time ^>= 1.12.2,
        mtl ^>= 2.3.1,
    hs-source-dirs:   app
    default-language: GHC2021
