cabal-version:      3.0
name:               cse230-project
version:            0.1.0.0
synopsis:           A terminal-based 4k VSRG, written in Haskell and brick.
-- description:
homepage:           https://github.com/huantianad/cse230-project
license:            LGPL-3.0-only
license-file:       LICENSE
author:             huantian
maintainer:         davidtianli@gmail.com
-- copyright:
category:           Game
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common options
    ghc-options:
        -threaded

        -Weverything
        -Wno-implicit-prelude
        -Wno-missing-exported-signatures
        -Wno-missing-import-lists
        -Wno-missed-specialisations
        -Wno-all-missed-specialisations
        -Wno-unsafe
        -Wno-safe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-local-signatures
        -Wno-monomorphism-restriction
        -Wno-missing-kind-signatures
        -Wno-missing-deriving-strategies
        -Wno-prepositive-qualified-module

    default-extensions:
        TemplateHaskell

executable cse230-project
    import:           options
    main-is:          Main.hs
    other-modules:
        HaskMania.Color
        HaskMania.Data.Beatmap
        HaskMania.Data.Parser
        HaskMania.Feedback
        HaskMania.GameRow
        HaskMania.TimeKeeper
        HaskMania.PauseScreen
        HaskMania.SoundW
        HaskMania.Settings
    -- other-extensions:
    build-depends:
        attoparsec ^>=0.14.4,
        base ^>=4.17.2.0,
        bytestring ^>=0.11.0,
        conduit ^>=1.3.5,
        conduit-extra ^>=1.3.6,
        containers ^>=0.6.7,
        optparse-applicative ^>=0.18.1,
        parser-combinators ^>=1.3.0,
        proteaaudio ^>=0.10.1,
        -- proteaaudio-sdl ^>=0.10.1,
        vty >=6.1,
        brick ^>=2.1.1,
        microlens-platform ^>=0.4.3.4,
        text ^>=2.0,
        time ^>=1.12.2,
        mtl ^>=2.3.1,
        zip-stream ^>=0.2.2,
    hs-source-dirs:   app
    default-language: GHC2021
